--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="app">
-      <router-view></router-view>
+      <router-view>
+      </router-view>
     </div>
   </body>
 </html>
